Updated data cleaning

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "import seaborn as sns\n",
     "from os.path import exists\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -175,80 +176,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                  Source  Cancer Type_\"Breast\"  Cancer Type_\"CRC\"  \\\n",
-      "0   \"3-Breast-Her2-ampl\"                  True              False   \n",
-      "1          \"8-Breast-WT\"                  True              False   \n",
-      "2  \"10-Breast-Her2-ampl\"                  True              False   \n",
-      "3           \"Breast-100\"                  True              False   \n",
-      "4  \"15-Breast-Her2-ampl\"                  True              False   \n",
+      "                Sample  Cancer_Type_Breast  Cancer_Type_CRC  Cancer_Type_GBM  \\\n",
+      "0   3-Breast-Her2-ampl                True            False            False   \n",
+      "1          8-Breast-WT                True            False            False   \n",
+      "2  10-Breast-Her2-ampl                True            False            False   \n",
+      "3           Breast-100                True            False            False   \n",
+      "4  15-Breast-Her2-ampl                True            False            False   \n",
       "\n",
-      "   Cancer Type_\"GBM\"  Cancer Type_\"HC\"  Cancer Type_\"Hepatobiliary\"  \\\n",
-      "0              False             False                        False   \n",
-      "1              False             False                        False   \n",
-      "2              False             False                        False   \n",
-      "3              False             False                        False   \n",
-      "4              False             False                        False   \n",
+      "   Cancer_Type_HC  Cancer_Type_Hepatobiliary  Cancer_Type_Lung  \\\n",
+      "0           False                      False             False   \n",
+      "1           False                      False             False   \n",
+      "2           False                      False             False   \n",
+      "3           False                      False             False   \n",
+      "4           False                      False             False   \n",
       "\n",
-      "   Cancer Type_\"Lung\"  Cancer Type_\"Pancreas\"  \\\n",
-      "0               False                   False   \n",
-      "1               False                   False   \n",
-      "2               False                   False   \n",
-      "3               False                   False   \n",
-      "4               False                   False   \n",
+      "   Cancer_Type_Pancreas  Cancer_Type_mutational subclass: EGFR  \\\n",
+      "0                 False                                  False   \n",
+      "1                 False                                  False   \n",
+      "2                 False                                  False   \n",
+      "3                 False                                  False   \n",
+      "4                 False                                  False   \n",
       "\n",
-      "   Cancer Type_\"mutational subclass: EGFR\"  \\\n",
+      "   Cancer_Type_mutational subclass: HER2+  \\\n",
+      "0                                   False   \n",
+      "1                                   False   \n",
+      "2                                   False   \n",
+      "3                                   False   \n",
+      "4                                   False   \n",
+      "\n",
+      "   Cancer_Type_mutational subclass: KRAS  \\\n",
+      "0                                  False   \n",
+      "1                                  False   \n",
+      "2                                  False   \n",
+      "3                                  False   \n",
+      "4                                  False   \n",
+      "\n",
+      "   Cancer_Type_mutational subclass: PIK3CA  \\\n",
       "0                                    False   \n",
       "1                                    False   \n",
       "2                                    False   \n",
       "3                                    False   \n",
       "4                                    False   \n",
       "\n",
-      "   Cancer Type_\"mutational subclass: HER2+\"  \\\n",
-      "0                                     False   \n",
-      "1                                     False   \n",
-      "2                                     False   \n",
-      "3                                     False   \n",
-      "4                                     False   \n",
-      "\n",
-      "   Cancer Type_\"mutational subclass: KRAS\"  \\\n",
-      "0                                    False   \n",
-      "1                                    False   \n",
-      "2                                    False   \n",
-      "3                                    False   \n",
-      "4                                    False   \n",
-      "\n",
-      "   Cancer Type_\"mutational subclass: PIK3CA\"  \\\n",
-      "0                                      False   \n",
-      "1                                      False   \n",
-      "2                                      False   \n",
-      "3                                      False   \n",
-      "4                                      False   \n",
-      "\n",
-      "   Cancer Type_\"mutational subclass: wt\"  \n",
-      "0                                  False  \n",
-      "1                                  False  \n",
-      "2                                  False  \n",
-      "3                                  False  \n",
-      "4                                  False  \n"
+      "   Cancer_Type_mutational subclass: wt  \n",
+      "0                                False  \n",
+      "1                                False  \n",
+      "2                                False  \n",
+      "3                                False  \n",
+      "4                                False  \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x1/4ffcbyys3j9b4z3p5kdqn3jh0000gn/T/ipykernel_80732/3673211878.py:6: SettingWithCopyWarning: \n",
+      "/var/folders/x1/4ffcbyys3j9b4z3p5kdqn3jh0000gn/T/ipykernel_83460/698329259.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  series_matrix_source_cancer['Cancer Type'] = series_matrix_source_cancer['Cancer Type'].str.replace('cancer type: ', '')\n"
+      "  series_matrix_source_cancer['Sample'] = series_matrix_source_cancer['Sample'].str.replace('\"', '')\n",
+      "/var/folders/x1/4ffcbyys3j9b4z3p5kdqn3jh0000gn/T/ipykernel_83460/698329259.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  series_matrix_source_cancer['Cancer_Type'] = series_matrix_source_cancer['Cancer_Type'].str.replace('cancer type: ', '')\n",
+      "/var/folders/x1/4ffcbyys3j9b4z3p5kdqn3jh0000gn/T/ipykernel_83460/698329259.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  series_matrix_source_cancer['Cancer_Type'] = series_matrix_source_cancer['Cancer_Type'].str.replace('\"', '')\n"
      ]
     }
    ],
@@ -256,11 +262,14 @@
     "# Keep only the sample source and cancer type columns\n",
     "series_matrix_source_cancer = series_matrix[['!Sample_source_name_ch1', '!Sample_characteristics_ch1.3']]\n",
     "# Rename the columns\n",
-    "series_matrix_source_cancer.columns = ['Source', 'Cancer Type']\n",
+    "series_matrix_source_cancer.columns = ['Sample', 'Cancer_Type']\n",
+    "# Delete the double quotes in the source\n",
+    "series_matrix_source_cancer['Sample'] = series_matrix_source_cancer['Sample'].str.replace('\"', '')\n",
     "# Delete the cancer type in str\n",
-    "series_matrix_source_cancer['Cancer Type'] = series_matrix_source_cancer['Cancer Type'].str.replace('cancer type: ', '')\n",
+    "series_matrix_source_cancer['Cancer_Type'] = series_matrix_source_cancer['Cancer_Type'].str.replace('cancer type: ', '')\n",
+    "series_matrix_source_cancer['Cancer_Type'] = series_matrix_source_cancer['Cancer_Type'].str.replace('\"', '')\n",
     "# One hot encode the cancer type\n",
-    "series_matrix_source_cancer = pd.get_dummies(series_matrix_source_cancer, columns=['Cancer Type'])\n",
+    "series_matrix_source_cancer = pd.get_dummies(series_matrix_source_cancer, columns=['Cancer_Type'])\n",
     "print(series_matrix_source_cancer.head())\n",
     "\n",
     "# Write the data to a csv file\n",
@@ -268,49 +277,118 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Visualization"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   gene_ID              samples  FPKM\n",
-      "0        0          8-Breast-WT     0\n",
-      "1        0          8-Breast-WT     0\n",
-      "2       44          8-Breast-WT    14\n",
-      "3        0  10-Breast-Her2-ampl     0\n",
-      "4        0  10-Breast-Her2-ampl     0\n",
-      "Empty DataFrame\n",
-      "Columns: [samples, FPKM]\n",
-      "Index: []\n"
+      "           gene_ID              Sample  FPKM  Cancer_Type_Breast  \\\n",
+      "0  ENSG00000000003  3-Breast-Her2-ampl     0                True   \n",
+      "1  ENSG00000000005  3-Breast-Her2-ampl     0                True   \n",
+      "2  ENSG00000000419  3-Breast-Her2-ampl    44                True   \n",
+      "3  ENSG00000000457  3-Breast-Her2-ampl    26                True   \n",
+      "4  ENSG00000000460  3-Breast-Her2-ampl    81                True   \n",
+      "\n",
+      "   Cancer_Type_CRC  Cancer_Type_GBM  Cancer_Type_HC  \\\n",
+      "0            False            False           False   \n",
+      "1            False            False           False   \n",
+      "2            False            False           False   \n",
+      "3            False            False           False   \n",
+      "4            False            False           False   \n",
+      "\n",
+      "   Cancer_Type_Hepatobiliary  Cancer_Type_Lung  Cancer_Type_Pancreas  \\\n",
+      "0                      False             False                 False   \n",
+      "1                      False             False                 False   \n",
+      "2                      False             False                 False   \n",
+      "3                      False             False                 False   \n",
+      "4                      False             False                 False   \n",
+      "\n",
+      "   Cancer_Type_mutational subclass: EGFR  \\\n",
+      "0                                  False   \n",
+      "1                                  False   \n",
+      "2                                  False   \n",
+      "3                                  False   \n",
+      "4                                  False   \n",
+      "\n",
+      "   Cancer_Type_mutational subclass: HER2+  \\\n",
+      "0                                   False   \n",
+      "1                                   False   \n",
+      "2                                   False   \n",
+      "3                                   False   \n",
+      "4                                   False   \n",
+      "\n",
+      "   Cancer_Type_mutational subclass: KRAS  \\\n",
+      "0                                  False   \n",
+      "1                                  False   \n",
+      "2                                  False   \n",
+      "3                                  False   \n",
+      "4                                  False   \n",
+      "\n",
+      "   Cancer_Type_mutational subclass: PIK3CA  \\\n",
+      "0                                    False   \n",
+      "1                                    False   \n",
+      "2                                    False   \n",
+      "3                                    False   \n",
+      "4                                    False   \n",
+      "\n",
+      "   Cancer_Type_mutational subclass: wt  \n",
+      "0                                False  \n",
+      "1                                False  \n",
+      "2                                False  \n",
+      "3                                False  \n",
+      "4                                False  \n"
      ]
     }
    ],
    "source": [
+    "# Load the data\n",
     "patient_data = pd.read_csv('data/series_matrix_source_cancer.csv')\n",
-    "rna_expression = pd.read_csv('data/GSE68086_TEP_data_matrix.csv', index_col=0)[:3]\n",
-    "rna_expression.columns.values[0] = 'gene_ID'\n",
-    "rna_expression_long = rna_expression.melt(id_vars=['gene_ID'], var_name='samples', value_name='FPKM')\n",
-    "print(rna_expression_long.head())\n",
+    "rna_expression = pd.read_csv('data/GSE68086_TEP_data_matrix.csv', index_col=0)\n",
+    "# print(patient_data.head())\n",
     "\n",
-    "# Get patients that have breast cancer\n",
-    "breast_cancer_patients = patient_data[patient_data['Cancer Type_\"Breast\"'] == 1]\n",
-    "# Get the rna expression of the breast cancer patients\n",
-    "breast_cancer_rna_expression = rna_expression_long[rna_expression_long['samples'].isin(breast_cancer_patients['Source'])]\n",
-    "# Get the average rna expression of the breast cancer patients\n",
-    "breast_cancer_rna_expression_avg = breast_cancer_rna_expression.groupby('gene_ID').mean()\n",
-    "# Get the top 10 genes\n",
-    "top_10_genes = breast_cancer_rna_expression_avg.sort_values('FPKM', ascending=False).head(10)\n",
-    "print(top_10_genes)\n"
+    "# Reset the index to make the index a regular column\n",
+    "rna_expression.reset_index(inplace=True)\n",
+    "# Rename the index column to 'gene_ID'\n",
+    "rna_expression.rename(columns={'index': 'gene_ID'}, inplace=True)\n",
+    "\n",
+    "# Reshape data from wide to long format\n",
+    "rna_expression_long = rna_expression.melt(id_vars=['gene_ID'], var_name='Sample', value_name='FPKM')\n",
+    "\n",
+    "# print(rna_expression_long.head())\n",
+    "\n",
+    "# Merge the patient data with the rna expression data\n",
+    "patient_data['Sample'] = patient_data['Sample']\n",
+    "merged_data = pd.merge(rna_expression_long, patient_data, on='Sample')\n",
+    "print(merged_data.head())\n",
+    "\n",
+    "# Write the data to a csv file\n",
+    "merged_data.to_csv('data/merged_data.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualize Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_data = pd.read_csv('data/merged_data.csv')\n",
+    "# Compare the difference in gene expression between breast cancer and normal samples\n",
+    "# Select the breast cancer and normal samples\n",
+    "breast_cancer_patients = merged_data[(merged_data['Cancer_Type_Breast'] == 1)]\n",
+    "healthy_controls = merged_data[(merged_data['Cancer_Type_Normal'] == 1)]\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
