added code to make smaller dataset for testing

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,6 +366,99 @@
     "\n",
     "# Write the data to a csv file\n",
     "merged_data.to_csv('data/merged_data.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           gene_ID              Sample  FPKM  Cancer_Type_Breast  \\\n",
+      "0  ENSG00000000003  3-Breast-Her2-ampl     0                True   \n",
+      "1  ENSG00000000005  3-Breast-Her2-ampl     0                True   \n",
+      "2  ENSG00000000419  3-Breast-Her2-ampl    44                True   \n",
+      "3  ENSG00000000457  3-Breast-Her2-ampl    26                True   \n",
+      "4  ENSG00000000460  3-Breast-Her2-ampl    81                True   \n",
+      "\n",
+      "   Cancer_Type_CRC  Cancer_Type_GBM  Cancer_Type_HC  \\\n",
+      "0            False            False           False   \n",
+      "1            False            False           False   \n",
+      "2            False            False           False   \n",
+      "3            False            False           False   \n",
+      "4            False            False           False   \n",
+      "\n",
+      "   Cancer_Type_Hepatobiliary  Cancer_Type_Lung  Cancer_Type_Pancreas  \\\n",
+      "0                      False             False                 False   \n",
+      "1                      False             False                 False   \n",
+      "2                      False             False                 False   \n",
+      "3                      False             False                 False   \n",
+      "4                      False             False                 False   \n",
+      "\n",
+      "   Cancer_Type_mutational subclass: EGFR  \\\n",
+      "0                                  False   \n",
+      "1                                  False   \n",
+      "2                                  False   \n",
+      "3                                  False   \n",
+      "4                                  False   \n",
+      "\n",
+      "   Cancer_Type_mutational subclass: HER2+  \\\n",
+      "0                                   False   \n",
+      "1                                   False   \n",
+      "2                                   False   \n",
+      "3                                   False   \n",
+      "4                                   False   \n",
+      "\n",
+      "   Cancer_Type_mutational subclass: KRAS  \\\n",
+      "0                                  False   \n",
+      "1                                  False   \n",
+      "2                                  False   \n",
+      "3                                  False   \n",
+      "4                                  False   \n",
+      "\n",
+      "   Cancer_Type_mutational subclass: PIK3CA  \\\n",
+      "0                                    False   \n",
+      "1                                    False   \n",
+      "2                                    False   \n",
+      "3                                    False   \n",
+      "4                                    False   \n",
+      "\n",
+      "   Cancer_Type_mutational subclass: wt  \n",
+      "0                                False  \n",
+      "1                                False  \n",
+      "2                                False  \n",
+      "3                                False  \n",
+      "4                                False  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Produce a smaller dataset to test the model\n",
+    "# Load the data\n",
+    "patient_data = pd.read_csv('data/series_matrix_source_cancer.csv')\n",
+    "rna_expression = pd.read_csv('data/GSE68086_TEP_data_matrix.csv', index_col=0)[:5000]\n",
+    "# print(patient_data.head())\n",
+    "\n",
+    "# Reset the index to make the index a regular column\n",
+    "rna_expression.reset_index(inplace=True)\n",
+    "# Rename the index column to 'gene_ID'\n",
+    "rna_expression.rename(columns={'index': 'gene_ID'}, inplace=True)\n",
+    "\n",
+    "# Reshape data from wide to long format\n",
+    "rna_expression_long = rna_expression.melt(id_vars=['gene_ID'], var_name='Sample', value_name='FPKM')\n",
+    "\n",
+    "# print(rna_expression_long.head())\n",
+    "\n",
+    "# Merge the patient data with the rna expression data\n",
+    "patient_data['Sample'] = patient_data['Sample']\n",
+    "merged_data = pd.merge(rna_expression_long, patient_data, on='Sample')\n",
+    "print(merged_data.head())\n",
+    "\n",
+    "# Write the data to a csv file\n",
+    "merged_data.to_csv('data/merged_data_5k.csv', index=False)"
    ]
   },
   {
