--- a/rf_processing.ipynb
+++ b/rf_processing.ipynb
@@ -431,19 +431,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use only a subset of genes with highest expression differences for simplicity\n",
+    "# I use only a subset of genes w/ highest expression differences for simplicity\n",
     "top_genes = gene_expression_difference.head(20).index\n",
     "model_data = merged_data[merged_data['gene_ID'].isin(top_genes)]\n",
     "model_data = model_data.pivot(index='Sample', columns='gene_ID', values='FPKM').reset_index()\n",
     "model_data = model_data.merge(patient_data, on='Sample')\n",
     "X = model_data[top_genes]\n",
-    "y = model_data['Cancer_Type_Breast']  # Binary target: Breast cancer vs. healthy control\n",
+    "y = model_data['Cancer_Type_Breast']  # Binary target: Breast cancer vs. Healthy Control (HC)\n",
     "\n",
-    "# Standardize the features\n",
+    "# Standardize features\n",
     "scaler = StandardScaler()\n",
     "X = scaler.fit_transform(X)\n",
     "\n",
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
     }
    ],
    "source": [
-    "# Define parameter grid for RandomizedSearchCV\n",
+    "# Parameter grid for RandomizedSearchCV\n",
     "param_dist = {\n",
     "    'n_estimators': [50, 100, 200, 500],\n",
     "    'max_depth': [None, 10, 20, 30, 50],\n",
@@ -482,16 +482,16 @@
     "    'bootstrap': [True, False]\n",
     "}\n",
     "\n",
-    "# Initialize the Random Forest model\n",
+    "# Initialize Random Forest model\n",
     "rf_model = RandomForestClassifier(random_state=42)\n",
     "\n",
     "# Initialize RandomizedSearchCV\n",
     "random_search = RandomizedSearchCV(estimator=rf_model, param_distributions=param_dist,\n",
     "                                   n_iter=20, cv=5, random_state=42, n_jobs=-1)\n",
-    "# Fit the RandomizedSearchCV\n",
+    "# Fit RandomizedSearchCV\n",
     "random_search.fit(X_train, y_train)\n",
     "\n",
-    "# Use the best estimator found by RandomizedSearchCV\n",
+    "# Use best estimator found by RandomizedSearchCV\n",
     "best_rf_model = random_search.best_estimator_\n",
     "\n",
     "print('Best Random Forest model:' + str(best_rf_model))\n",
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
