--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -25,6 +25,9 @@
     "# Load training data\n",
     "train = pd.read_csv('data/train_data_normalized.csv')\n",
     "test = pd.read_csv('data/test_data_normalized.csv')\n",
+    "\n",
+    "train = train.drop(columns=['mean', 'var'])\n",
+    "test = test.drop(columns=['mean', 'var'])\n",
     "# build model\n",
     "model = model = Sequential([\n",
     "    Dense(64, input_dim=train.shape[1], activation='relu'),\n",
@@ -35,7 +38,8 @@
     "# compile model\n",
     "model.compile(optimizer=Adam(0.001), loss='binary_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "# train model\n"
+    "# train model\n",
+    "history = model.fit(train.drop(columns=['Cancer']), train['Cancer'], epochs=100, batch_size=32, validation_split=0.2)\n"
    ]
   }
  ],
