Updated neural network

--- a/Linear_and_Logistic_Regression.ipynb
+++ b/Linear_and_Logistic_Regression.ipynb
@@ -230,9 +230,9 @@
         "id": "qIIXX13Jy-uO"
       },
       "source": [
-        "#**Interpretation of Results**\n",
+        "# **Interpretation of Results**\n",
         "\n",
-        "#1. Linear Regression Results\n",
+        "1. Linear Regression Results\n",
         "\n",
         "**Mean Squared Error (MSE)**\n",
         "\n",
