--- a/Linear_and_Logistic_Regression.ipynb
+++ b/Linear_and_Logistic_Regression.ipynb
@@ -12,7 +12,7 @@
         "import numpy as np\n",
         "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
         "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.metrics import mean_squared_error, r2_score, accuracy_score, confusion_matrix, ConfusionMatrixDisplay\n",
+        "from sklearn.metrics import mean_squared_error, r2_score, accuracy_score, confusion_matrix, ConfusionMatrixDisplay, f1_score\n",
         "import matplotlib.pyplot as plt"
       ]
     },
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -71,6 +71,7 @@
           "output_type": "stream",
           "text": [
             "### Linear Regression ###\n",
+            "F1 Score: 0.9696969696969697\n",
             "Mean Squared Error: 0.7219968194829911\n",
             "R^2 Score: -5.702193332857825\n",
             "Linear Regression Coefficients:\n",
@@ -102,6 +103,9 @@
         "# Evaluate Linear Regression\n",
         "mse = mean_squared_error(y_test, y_pred_linear)\n",
         "r2 = r2_score(y_test, y_pred_linear)\n",
+        "# Calculate f1 score\n",
+        "f1 = f1_score(y_test, (y_pred_linear > 0.5).astype(int))\n",
+        "print(f\"F1 Score: {f1}\")\n",
         "print(f\"Mean Squared Error: {mse}\")\n",
         "print(f\"R^2 Score: {r2}\")\n",
         "\n",
@@ -126,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -141,6 +145,7 @@
           "text": [
             "\n",
             "### Logistic Regression ###\n",
+            "F1 Score: 0.9696969696969697\n",
             "Accuracy: 0.9473684210526315\n",
             "Logistic Regression Coefficients:\n",
             "FPKM Coefficient: 0.0010276600133968831\n",
@@ -163,13 +168,16 @@
         "\n",
         "# Logistic Regression\n",
         "print(\"\\n### Logistic Regression ###\")\n",
-        "logistic_model = LogisticRegression()\n",
+        "logistic_model = LogisticRegression(random_state=0)\n",
         "logistic_model.fit(X_train_scaled, y_train)\n",
         "y_pred_logistic = logistic_model.predict(X_test_scaled)\n",
         "\n",
         "# Evaluate Logistic Regression\n",
         "accuracy = accuracy_score(y_test, y_pred_logistic)\n",
         "conf_matrix = confusion_matrix(y_test, y_pred_logistic)\n",
+        "# Calculate f1 score\n",
+        "f1 = f1_score(y_test, y_pred_logistic)\n",
+        "print(f\"F1 Score: {f1}\")\n",
         "print(f\"Accuracy: {accuracy}\")\n",
         "\n",
         "# Coefficient of FPKM for Logistic Regression\n",
@@ -192,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
