--- a/Linear_and_Logistic_Regression.ipynb
+++ b/Linear_and_Logistic_Regression.ipynb
@@ -240,9 +240,9 @@
       "source": [
         "# **Interpretation of Results**\n",
         "\n",
-        "The results indicate that the linear regression model is not performing well on the given data. The high MSE and negative R^2 score suggest that the model does not fit the data well and performs worse than a simple mean-based model. The small FPKM coefficient indicates a weak relationship between FPKM and the dependent variable.\n",
+        "Both models have good F1 score and accuracy score, and the confusion matrix, indicating both models are good at classifying cancer and non-cancer patients. Even though the dataset is very imbalanced, the models are able to predict the cancer patients with high accuracy according to the confusion matrix.\n",
         "\n",
-        "The logistic regression model shows high accuracy (94.7%), indicating good performance on the given data. The FPKM coefficient is small but positive, suggesting a slight increase in the likelihood of the positive class with increasing FPKM values. The high intercept indicates a strong baseline probability of the positive class when FPKM is zero. Overall, the model appears to be effective in predicting the cancer class based on the FPKM values.\n"
+        "The good thing about linear and logistical models is that they are easy to interpret. The coefficients of the features can be used to interpret the importance of the features in predicting the target variable. So a positive coefficient means the higher that specific gene expresses, the more likely the patient has cancer. A negative coefficient means the lower that specific gene expresses, the more likely the patient has cancer. It will be a good way for Biologists to understand the importance of the genes in predicting cancer, and finding potential biomarkers for cancer.\n"
       ]
     },
     {
