--- a/Linear_and_Logistic_Regression.ipynb
+++ b/Linear_and_Logistic_Regression.ipynb
@@ -246,6 +246,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# **Gene Correlation Analysis**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 15,
       "metadata": {},
